# lc3labtest

./: CMakeLists.txt
scripts/: auto_verifier.py
src/cli/: CMakeLists.txt  labtest_main.cpp  labtest_single_main.cpp
src/cli/lab_verifier/: CMakeLists.txt  input.cpp  input.hpp  lab1.cpp  lab1.hpp  lab2.cpp  lab2.hpp  lab3.cpp  lab3.hpp  lab4.cpp  lab4.hpp  lab6.cpp  lab6.hpp  utils.hpp  verifiers.hpp
